changed the font for a screenshot to make a banner

--- a/alacritty/font.yml
+++ b/alacritty/font.yml
@@ -9,16 +9,16 @@
 
 font:
   normal:
-    family: Iosevka  
+    family: Agave  
 
   bold: 
-    family: Iosevka 
+    family: Agave 
 
   italic:
-    family: Iosevka 
+    family: Agave 
 
   bold_italic:
-    family: Iosevka 
+    family: Agave 
 
   size: 10.5
 
