--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -6,7 +6,8 @@ live_config_reload: true
 
 import:
     # theme
-    - ~/.config/alacritty/themes/nord.yml
+    - ~/.config/alacritty/themes/horizon-light.yaml
+
     # font
     - ~/.config/alacritty/font.yml
     # window sizing
