default shell: fish

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -16,3 +16,5 @@ import:
     #- ~/.config/alacritty/cursor.yml
     # key bindings
     - ~/.config/alacritty/key_bindings.yml
+shell:
+  program: /bin/fish
