--- a/i3/config
+++ b/i3/config
@@ -19,24 +19,15 @@ bar {
 
   separator_symbol " "
 
-  i3bar_command i3bar --transparency
+  # i3bar_command i3bar --transparency
 
-	#colors {
-	#	background #0f0f0faa
-	#	statusline #d9dee9
-
-	#	#<colorclass> 		  <border> 	  <backg>		  <text>
-	#	focused_workspace 	#0f0f0faa   #0f0f0faa 	#d8dee9
-	#	inactive_workspace 	#0f0f0faa   #0f0f0faa   #6c6e74
-  #  binding_mode        #bf616a     #bf616a     #0f0f0faa
-	#}
   colors {
-    background #00000000
-    statusline #00000000
+    background #1d1f21
+    statusline #ff0000
 
-    focused_workspace #00000000 #00000000 #fadad1
-    inactive_workspace #00000000 #00000000 #1a1c23
-    binding_mode #fadad1ff #fadad199 #1a1c23
+    focused_workspace #1d1f21 #1d1f21 #cccccc
+    inactive_workspace #1d1f21 #1d1f21 #888888
+    binding_mode #678295 #678295 #a1c23
   }
 }
 
@@ -58,10 +49,10 @@ gaps outer -4
 
 #--- colors ---#
 
-# class					border  backgr  text    indic	child_border
-client.focused			#4c566a #4c566a #eceff4 #4c566a #4c566a
-client.focused_inactive #434c5e #434c5e #d8dee9 #434c5e #434c5e
-client.unfocused		#3b4252 #3b4252 #c4c9d3 #3b4252 #3b4252
+# class					        border  backgr  text    indic	  child_border
+client.focused			    #678295 #678295 #eceff4 #678295 #678295
+client.focused_inactive #678295 #678295 #d8dee9 #678295 #678295
+client.unfocused		    #666666 #666666 #c4c9d3 #666666 #666666
 
 client.urgent			#1d1f21 #1d1f21 #d8dee9 #000000 #000000 
 client.placeholder		#000000 #1d1f21 #d8dee9 #000000 #123456 
