--- a/i3blocks/config
+++ b/i3blocks/config
@@ -6,13 +6,13 @@
 #--- global config ---#
 
 align=center
-color=#1a1c23
+color=#cccccc
+background=#1d1f21
 
 
 #--- modules --#
 
 [volume]
-background=#00000000
 #min_width=70
 command=~/bin/i3blocks_volume.bash
 interval=once
@@ -20,7 +20,6 @@ label=墳
 signal=10
 
 [iface]
-background=#00000000
 #min_width=130
 command=~/bin/i3blocks_iface.bash
 interval=10
@@ -29,19 +28,16 @@ label=
 display_wifi_name=1
 
 [keyboard]
-background=#00000000
 #min_width=70
 command=~/bin/i3blocks_keyboard.bash
 interval=1
 
 [date]
-background=#00000000
 #min_width=160
 command=~/bin/i3blocks_calendar.sh
 interval=1
 
 [clock]
-background=#00000000
 #min_width=90
 command=~/bin/i3blocks_clock.sh
 interval=30
