--- a/alacritty/font.yml
+++ b/alacritty/font.yml
@@ -9,16 +9,16 @@
 
 font:
   normal:
-    family: monospace  
+    family: Hack  
 
   bold: 
-    family: monospace 
+    family: Hack 
 
   italic:
-    family: monospace 
+    family: Hack 
 
   bold_italic:
-    family: monospace 
+    family: Hack 
 
   size: 9.5
 
