--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -1,6 +1,8 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
+    info underline
+    info underline
     info title
 
     info underline
