--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -713,7 +713,7 @@ image_backend="kitty"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="/home/stf/.config/neofetch/sasuke.jpg"
+image_source="/home/stf/.config/neofetch/img/pacman.jpg"
 
 
 # Ascii Options
