shadows under the windows

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -3,40 +3,18 @@
 #################################
 
 
-# Enabled client-side shadows on windows. Note desktop windows
-# (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
-# unless explicitly requested using the wintypes option.
-#
-# shadow = false
 shadow = true;
-
-# The blur radius for shadows, in pixels. (defaults to 12)
-# shadow-radius = 12
-shadow-radius = 7;
-
-# The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
-
-# The left offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-x = -15
-shadow-offset-x = -7;
-
-# The top offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-y = -15
+shadow-radius = 12;
+shadow-opacity = .60;
+shadow-offset-x = -13;
 shadow-offset-y = -7;
-
-# Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
-
-# Green color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-green = 0
-
-# Blue color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-blue = 0
-
+#
 # Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
 # shadow-color = "#000000"
-
+#
 # Specify a list of conditions of windows that should have no shadow.
 #
 # examples:
@@ -44,11 +22,9 @@ shadow-offset-y = -7;
 #
 # shadow-exclude = []
 shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
+  #"name = 'Notification'",
+  #"class_g = 'Conky'",
+  #"_GTK_FRAME_EXTENTS@:c"
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -64,53 +40,32 @@ shadow-exclude = [
 # Crop shadow of a window fully on a particular Xinerama screen to the screen.
 # xinerama-shadow-crop = false
 
-
 #################################
 #           Fading              #
 #################################
 
-
-# Fade windows in/out when opening/closing and when opacity changes,
-#  unless no-fading-openclose is used.
-# fading = false
 fading = true;
-
-# Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-# fade-in-step = 0.028
-fade-in-step = 0.03;
-
-# Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-# fade-out-step = 0.03
-fade-out-step = 0.03;
-
+fade-in-step = 0.06;
+fade-out-step = 0.06;
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
-
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
-
 # Do not fade on window open/close.
 # no-fading-openclose = false
-
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
-
 
 #################################
 #   Transparency / Opacity      #
 #################################
 
 
-# Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.80;
-
+#inactive-opacity = 0.80;
+#
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
-frame-opacity = 0.9;
+#frame-opacity = 0.9;
 
-# Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
-# inactive-opacity-override = true
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
@@ -239,7 +194,7 @@ detect-rounded-corners = true;
 # not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
 #
 # detect-client-opacity = false
-detect-client-opacity = true;
+detect-client-opacity = false;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
@@ -405,9 +360,12 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
+  tooltip       = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  popup_menu    = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.8; }
+  dock          = { shadow = true; clip-shadow-above = true; }
+  dropdown_menu = { shadow = true; };
+  dnd           = { shadow = true; }
+  popup_menu    = { shadow = true; };
+  utility       = { shadow = true; };
 };
