super cool neofetch

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -1,14 +1,14 @@
 # See this wiki page for more info:
+#
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    info underline
     info underline
     info title
 
     info underline
     info "オペ" distro
     #info "host" model
-    #info "krnl" kernel
+    info "芯愛" kernel
     info "時間" uptime
     info "パッ" packages
     info underline
